--- a/index.html
+++ b/index.html
@@ -31,32 +31,29 @@
       <h3>Identify</h3>
         <P>We focus on the most important details.<p>
     <img src="./resources/understand.svg"/>
-      <h3>Identify</h3>
+      <h3>Understand</h3>
         <P>We study our projects inside and out.<p>
     <img src="./resources/execute.svg"/>
-      <h3>Identify</h3>
+      <h3>Execute</h3>
         <P>We put everything we have into our work.<p>
   </div>
   <div class="work">
     <h2>Designed in New York</h2>
       <h3>Portfolio<h3>
-        <br>
         <p>Coming Soon<p>
   </div>
   <div class="team">
     <h3>Team</h3>
-    <br>
       <p>We're Hiring</p>
   </div>
   <div class="work">
-    <h3>Contact</h3>
-    <br>
-    <p>Phone: (555)-555-5555<br> E-mail: test@example.com<br> Twitter: @test
+    <h3>Contact</h3>  
+    <p>Phone: (555)-555-5555<br><br> E-mail: test@example.com<br><br> Twitter: @test
     </div>
 </body>
 <footer>
       <&copy Broadway 2017 <a href=".title">Home</a> <a href=".process">Process</a>
-        <a href=".work">Work</a> <a href=".team">Team</a>   <a href=".contact">Contact</a>  
+        <a href=".work">Work</a> <a href=".team">Team</a>   <a href=".contact">Contact</a>
 </footer>
 </html>
 <!--  -->
