--- a/index.html
+++ b/index.html
@@ -6,26 +6,26 @@
 </head>
 <body>
   <!-- Title  -->
-<div class="title">
+<div id=title>
   <h1>Broadway Design</h1>
   <br>
   <nav>
-    <a href=".title">Home</a>
+    <a href="#title">Home</a>
     <br>
     <br>
-    <a href=".process">Process</a>
+    <a href="#process">Process</a>
     <br>
     <br>
-    <a href=".work">Work</a>
+    <a href="#work">Work</a>
     <br>
     <br>
-    <a href=".team">Team</a>
+    <a href="#team">Team</a>
     <br>
     <br>
-    <a href=".contact">Contact</a>
+    <a href="#contact">Contact</a>
   </nav>
 </div>
-<div class="process">
+<div id=process>
   <h2>Our Process<h2>
     <img src="./resources/identify.svg"/>
       <h3>Identify</h3>
@@ -37,23 +37,23 @@
       <h3>Execute</h3>
         <P>We put everything we have into our work.<p>
   </div>
-  <div class="work">
+  <div id=work>
     <h2>Designed in New York</h2>
       <h3>Portfolio<h3>
         <p>Coming Soon<p>
   </div>
-  <div class="team">
+  <div id=team>
     <h3>Team</h3>
       <p>We're Hiring</p>
   </div>
-  <div class="work">
-    <h3>Contact</h3>  
+  <div id=contact>
+    <h3>Contact</h3>
     <p>Phone: (555)-555-5555<br><br> E-mail: test@example.com<br><br> Twitter: @test
     </div>
 </body>
 <footer>
-      <&copy Broadway 2017 <a href=".title">Home</a> <a href=".process">Process</a>
-        <a href=".work">Work</a> <a href=".team">Team</a>   <a href=".contact">Contact</a>
+      <&copy Broadway 2017 <a href="#title">Home</a> <a href="#process">Process</a>
+        <a href="#work">Work</a> <a href="#team">Team</a>   <a href="#contact">Contact</a>
 </footer>
 </html>
 <!--  -->
